[gd_scene load_steps=19 format=2]

[ext_resource path="res://Town/Town.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/Roboto/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Flags/Flag0.png" type="Texture" id=3]
[ext_resource path="res://Assets/Flags/Flag1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Fonts/Roboto.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/Inside.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Outside.gd" type="Script" id=8]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=9]
[ext_resource path="res://Scripts/History.gd" type="Script" id=10]
[ext_resource path="res://Game/Game.gd" type="Script" id=11]
[ext_resource path="res://Assets/Fonts/Roboto/Roboto-Italic.ttf" type="DynamicFontData" id=12]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.278431, 0.729412, 0.458824, 1 )

[sub_resource type="StyleBoxFlat" id=3]
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=7]

[node name="Game" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Panel" parent="."]
margin_right = 640.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )

[node name="GridContainer" type="GridContainer" parent="Left"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -258.0
margin_top = -258.0
margin_right = 258.0
margin_bottom = 258.0
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Town0" parent="Left/GridContainer" instance=ExtResource( 1 )]

[node name="Town1" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 104.0
margin_right = 204.0

[node name="Town2" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 208.0
margin_right = 308.0

[node name="Town3" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 312.0
margin_right = 412.0

[node name="Town4" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 416.0
margin_right = 516.0

[node name="Town5" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_top = 104.0
margin_bottom = 204.0

[node name="Town6" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 104.0
margin_top = 104.0
margin_right = 204.0
margin_bottom = 204.0

[node name="Town7" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 208.0
margin_top = 104.0
margin_right = 308.0
margin_bottom = 204.0

[node name="Town8" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 312.0
margin_top = 104.0
margin_right = 412.0
margin_bottom = 204.0

[node name="Town9" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 416.0
margin_top = 104.0
margin_right = 516.0
margin_bottom = 204.0

[node name="Town10" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_top = 208.0
margin_bottom = 308.0

[node name="Town11" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 104.0
margin_top = 208.0
margin_right = 204.0
margin_bottom = 308.0

[node name="Town12" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 208.0
margin_top = 208.0
margin_right = 308.0
margin_bottom = 308.0

[node name="Town13" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 312.0
margin_top = 208.0
margin_right = 412.0
margin_bottom = 308.0

[node name="Town14" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 416.0
margin_top = 208.0
margin_right = 516.0
margin_bottom = 308.0

[node name="Town15" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_top = 312.0
margin_bottom = 412.0

[node name="Town16" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 104.0
margin_top = 312.0
margin_right = 204.0
margin_bottom = 412.0

[node name="Town17" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 208.0
margin_top = 312.0
margin_right = 308.0
margin_bottom = 412.0

[node name="Town18" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 312.0
margin_top = 312.0
margin_right = 412.0
margin_bottom = 412.0

[node name="Town19" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 416.0
margin_top = 312.0
margin_right = 516.0
margin_bottom = 412.0

[node name="Town20" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_top = 416.0
margin_bottom = 516.0

[node name="Town21" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 104.0
margin_top = 416.0
margin_right = 204.0
margin_bottom = 516.0

[node name="Town22" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 208.0
margin_top = 416.0
margin_right = 308.0
margin_bottom = 516.0

[node name="Town23" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 312.0
margin_top = 416.0
margin_right = 412.0
margin_bottom = 516.0

[node name="Town24" parent="Left/GridContainer" instance=ExtResource( 1 )]
margin_left = 416.0
margin_top = 416.0
margin_right = 516.0
margin_bottom = 516.0

[node name="Right" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -300.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="Right"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_top = 75.0
margin_right = 50.0
margin_bottom = 175.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "54"
align = 1
valign = 1

[node name="Flag" type="TextureRect" parent="Right"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -25.0
margin_top = 20.0
margin_right = 25.0
margin_bottom = 50.0
texture = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="Right"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -15.0
margin_right = 52.0
margin_bottom = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player0" type="TextureRect" parent="Right/HBoxContainer"]
margin_right = 50.0
margin_bottom = 30.0
texture = ExtResource( 3 )

[node name="Player1" type="TextureRect" parent="Right/HBoxContainer"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 30.0
texture = ExtResource( 4 )

[node name="Ready" type="Button" parent="Right"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.5
margin_top = 100.0
margin_right = 126.5
margin_bottom = 188.0
custom_fonts/font = SubResource( 5 )
text = "Ready"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notify" type="Label" parent="Right"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -120.5
margin_top = -60.0
margin_right = 120.5
margin_bottom = -23.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TownManage" type="TabContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -382.5
margin_top = -221.5
margin_right = 382.5
margin_bottom = 221.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inside" type="Tabs" parent="UI/TownManage"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )

[node name="TownInfo" type="HBoxContainer" parent="UI/TownManage/Inside"]
margin_right = 764.0
margin_bottom = 76.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TownName" type="VBoxContainer" parent="UI/TownManage/Inside/TownInfo"]
margin_left = 82.0
margin_right = 187.0
margin_bottom = 76.0

[node name="Title" type="Label" parent="UI/TownManage/Inside/TownInfo/TownName"]
margin_right = 105.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 5 )
text = "Town name"
align = 1
valign = 1

[node name="Value" type="Label" parent="UI/TownManage/Inside/TownInfo/TownName"]
margin_top = 28.0
margin_right = 105.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1
valign = 1

[node name="SolidersInTown" type="VBoxContainer" parent="UI/TownManage/Inside/TownInfo"]
margin_left = 237.0
margin_right = 384.0
margin_bottom = 76.0

[node name="Title" type="Label" parent="UI/TownManage/Inside/TownInfo/SolidersInTown"]
margin_right = 147.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 5 )
text = "Soliders in town"
align = 1
valign = 1

[node name="Value" type="Label" parent="UI/TownManage/Inside/TownInfo/SolidersInTown"]
margin_top = 28.0
margin_right = 147.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1
valign = 1

[node name="SolidersOfTown" type="VBoxContainer" parent="UI/TownManage/Inside/TownInfo"]
margin_left = 434.0
margin_right = 582.0
margin_bottom = 76.0

[node name="Title" type="Label" parent="UI/TownManage/Inside/TownInfo/SolidersOfTown"]
margin_right = 148.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 5 )
text = "Soliders of town"
align = 1
valign = 1

[node name="Value" type="Label" parent="UI/TownManage/Inside/TownInfo/SolidersOfTown"]
margin_top = 28.0
margin_right = 148.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1
valign = 1

[node name="Flag" type="TextureRect" parent="UI/TownManage/Inside/TownInfo"]
margin_left = 632.0
margin_top = 23.0
margin_right = 682.0
margin_bottom = 53.0
size_flags_horizontal = 5
size_flags_vertical = 4
texture = ExtResource( 3 )

[node name="SolidersInfo" type="ScrollContainer" parent="UI/TownManage/Inside"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -317.5
margin_top = -145.5
margin_right = 337.5
margin_bottom = 146.5
custom_styles/bg = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TownManage/Inside/SolidersInfo"]
margin_right = 655.0
margin_bottom = 292.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ComeBack" type="Button" parent="UI/TownManage/Inside"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -59.5
margin_top = -47.0
margin_right = 59.5
margin_bottom = -9.0
custom_fonts/font = ExtResource( 5 )
text = "Come back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="UI/TownManage/Inside"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 650.5
margin_top = 353.5
margin_right = -47.4999
margin_bottom = -21.5
custom_fonts/font = ExtResource( 5 )
text = "All "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outside" type="Tabs" parent="UI/TownManage"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 8 )

[node name="SelectTown" type="OptionButton" parent="UI/TownManage/Outside"]
margin_left = 327.851
margin_right = 411.851
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SolidersInfo" type="ScrollContainer" parent="UI/TownManage/Outside"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.5
margin_top = -146.0
margin_right = 320.5
margin_bottom = 146.0
custom_styles/bg = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TownManage/Outside/SolidersInfo"]
margin_right = 641.0
margin_bottom = 292.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MoveTroop" type="Button" parent="UI/TownManage/Outside"]
margin_left = 315.378
margin_top = 370.614
margin_right = 430.378
margin_bottom = 400.614
custom_fonts/font = ExtResource( 5 )
text = "Move troop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="UI/TownManage/Outside"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 642.5
margin_top = 353.5
margin_right = -60.4996
margin_bottom = -21.5
custom_fonts/font = ExtResource( 5 )
text = "All"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="History" type="Tabs" parent="UI/TownManage"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 10 )

[node name="Year" type="OptionButton" parent="UI/TownManage/History"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_right = -100.0
margin_bottom = 37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="State" type="OptionButton" parent="UI/TownManage/History"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_right = 50.0
margin_bottom = 37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Side" type="OptionButton" parent="UI/TownManage/History"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 100.0
margin_right = 200.0
margin_bottom = 37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SolidersInfo" type="ScrollContainer" parent="UI/TownManage/History"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -305.0
margin_top = -148.5
margin_right = 305.0
margin_bottom = 143.5
custom_styles/bg = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TownManage/History/SolidersInfo"]
margin_right = 610.0
margin_bottom = 292.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Exit" type="Button" parent="UI"]
margin_left = 841.0
margin_top = 75.0
margin_right = 898.0
margin_bottom = 98.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Right/Ready" to="." method="_on_Ready_pressed"]
[connection signal="pressed" from="UI/TownManage/Inside/ComeBack" to="UI/TownManage/Inside" method="_on_ComeBack_pressed"]
[connection signal="toggled" from="UI/TownManage/Inside/CheckBox" to="UI/TownManage/Inside" method="_on_CheckBox_toggled"]
[connection signal="pressed" from="UI/TownManage/Outside/MoveTroop" to="UI/TownManage/Outside" method="_on_MoveTroop_pressed"]
[connection signal="toggled" from="UI/TownManage/Outside/CheckBox" to="UI/TownManage/Outside" method="_on_CheckBox_toggled"]
[connection signal="item_selected" from="UI/TownManage/History/Year" to="UI/TownManage/History" method="_on_Year_item_selected"]
[connection signal="item_selected" from="UI/TownManage/History/State" to="UI/TownManage/History" method="_on_State_item_selected"]
[connection signal="item_selected" from="UI/TownManage/History/Side" to="UI/TownManage/History" method="_on_Side_item_selected"]
[connection signal="pressed" from="UI/Exit" to="UI" method="_on_Exit_pressed"]
